@@ -2,13 +2,13 @@ package io.quarkus.webjar.locator.test;
 
 import static org.hamcrest.core.Is.is;
 
-import java.util.Arrays;
+import java.util.List;
 
 import org.jboss.shrinkwrap.api.asset.StringAsset;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.RegisterExtension;
 
-import io.quarkus.bootstrap.model.AppArtifact;
+import io.quarkus.maven.dependency.ArtifactDependency;
 import io.quarkus.test.QuarkusUnitTest;
 import io.restassured.RestAssured;
 
@@ -18,11 +18,11 @@ public class WebJarLocatorRootPathTest extends WebJarLocatorTestSupport {
     @RegisterExtension
     static QuarkusUnitTest runner = new QuarkusUnitTest()
             .withApplicationRoot((jar) -> jar
-                    .addAsResource(new StringAsset("<html>Hello!<html>"), META_INF_RESOURCES + "/index.html")
-                    .addAsResource(new StringAsset("Test"), META_INF_RESOURCES + "/some/path/test.txt"))
+                    .addAsResource(new StringAsset("<html>Hello!<html>"), META_INF_RESOURCES + "index.html")
+                    .addAsResource(new StringAsset("Test"), META_INF_RESOURCES + "some/path/test.txt"))
             .overrideConfigKey("quarkus.http.root-path", "/app")
-            .setForcedDependencies(Arrays.asList(new AppArtifact("org.webjars", "jquery-ui", JQUERY_UI_VERSION),
-                    new AppArtifact("org.webjars", "momentjs", MOMENTJS_VERSION)));
+            .setForcedDependencies(List.of(ArtifactDependency.of("org.webjars", "jquery-ui", JQUERY_UI_VERSION),
+                    ArtifactDependency.of("org.webjars", "momentjs", MOMENTJS_VERSION)));
 
     @Test
     public void test() {
@@ -30,7 +30,6 @@ public class WebJarLocatorRootPathTest extends WebJarLocatorTestSupport {
         RestAssured.get("/").then()
                 .statusCode(200)
                 .body(is("<html>Hello!<html>"));
-
         RestAssured.get("/index.html").then()
                 .statusCode(200)
                 .body(is("<html>Hello!<html>"));
